--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,210 @@ a {
     text-decoration: none;
 }
 
+/** navbar start **/
+header {
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(-45deg, #000 59%, #ff0000 50%);
+    position: absolute;
+    overflow: hidden;
+}
+
+header::before {
+    content: '';
+    position: absolute;
+    top: -34rem;
+    left: -7rem;
+    width: 35%;
+    height: 123%;
+    background-color: #ff0000;
+    transform: skew(-46deg);
+    box-shadow: 26px 32px 64px 49px #000;
+}
+
+::placeholder {
+    color: #fff;
+    border: none;
+    transition: color .3s ease-in-out;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1;
+    position: relative;
+    padding: 1rem 30px;
+}
+
+.left-nav {
+    display: flex;
+    align-items: center;
+    animation: slideInLeft 1s ease-in-out;
+}
+
+@keyframes slideInLeft {
+    0% {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.left-nav .logo img {
+    height: 40px;
+    position: relative;
+}
+
+.left-nav form {
+    margin-left: 20px;
+    position: relative;
+    animation: fadein 1s ease-in-out .5s backwards;
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.left-nav form input[type="search"] {
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 15px 20px 15px 40px;
+    border-radius: 15px;
+    box-shadow: inset 0 0 10px #000, 0 5px 10px #000;
+    width: 300px;
+    animation: input 1s ease-in-out .5s backwards;
+    transition: all .5s ease-in;
+    outline: none;
+}
+
+@keyframes input {
+    0% {
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+
+.left-nav i {
+    font-weight: 900;
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff;
+    pointer-events: none;
+}
+
+.left-nav form input[type="search"]:focus {
+    box-shadow: inset 0 0 15px #000, 0 10px 18px #000;
+    width: 350px;
+}
+
+.right-nav {
+    margin-left: 27rem;
+    font-size: 1.3rem;
+    animation: slideInRight 1s ease-in-out;
+    transition: all 1s ease;
+}
+
+@keyframes slideInRight {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.nav-links li {
+    margin-left: 80px;
+    animation: fadein 1s ease-in-out .5s backwards;
+}
+
+.nav-links li:nth-child(1) {
+    animation-delay: 0.9s;
+}
+.nav-links li:nth-child(2) {
+    animation-delay: 1s;
+}
+.nav-links li:nth-child(3) {
+    animation-delay: 1.2s;
+}
+.nav-links li:nth-child(4) {
+    animation-delay: 1.5s;
+}
+.nav-links li:nth-child(5) {
+    animation-delay: 1.8s;
+}
+
+.nav-links a {
+    color: #fff;
+    transition: all .3s ease;
+    position: relative;
+}
+
+.nav-links a::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    transform: scaleX(0);
+    transition: all .4s ease-in-out;
+}
+
+.right-nav .profile-link img {
+    height: 40px;
+    border-radius: 50%;
+}
+
+.nav-links a:hover {
+    text-shadow: 0 0 10px #000;
+}
+
+.nav-links li:not(:last-child) a:hover::after {
+    transform: scaleX(1);
+}
+
+.nav-links {
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+/** navbar end **/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
