--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,6 +375,176 @@ nav {
 
 
 
+/** air start **/
+.air {
+    position: absolute;
+    right: 0;
+    bottom: 33rem;
+    color: #fff;
+    width: 39%;
+}
+
+.nike {
+    margin-bottom: 18px;
+}
+
+.air p {
+    width: 73%;
+}
+
+.nike h1 {
+    font-size: 5rem;
+    text-shadow: 14px 1px 4px red;
+}
+
+.animated-text {
+    opacity: 0;
+    animation: fadein 1s ease-in-out .5s forwards;
+}
+
+.delay-1 {
+    animation-delay: .5s;
+}
+.delay-2 {
+    animation-delay: 1s;
+}
+.delay-3 {
+    animation-delay: 1.5s;
+}
+.delay-4 {
+    animation-delay: 2s;
+}
+.delay-5 {
+    animation-delay: 2.5s;
+}
+.delay-6 {
+    animation-delay: 3s;
+}
+.delay-7 {
+    animation-delay: 3.5s;
+}
+.delay-8 {
+    animation-delay: 4s;
+}
+
+.air li {
+    float: left;
+    position: relative;
+    top: 10rem;
+    margin-left: 53px;
+    left: -4rem;
+    border: 2px solid red;
+    padding: 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all .5s ease;
+    opacity: 0;
+    animation: fadein 1s ease-in-out .5s forwards;
+}
+
+.air li:nth-child(1) {
+    animation-delay: 1s;
+}
+.air li:nth-child(2) {
+    animation-delay: 1.5s;
+}
+.air li:nth-child(3) {
+    animation-delay: 2s;
+}
+.air li:nth-child(4) {
+    animation-delay: 2.5s;
+}
+
+.air li:hover {
+    color: red;
+    border-color: #fff;
+}
+
+.img img {
+    max-width: 100%;
+    transition: transform .3s ease;
+}
+
+.sp {
+    position: absolute;
+    left: 0;
+    top: 17rem;
+    font-size: 4rem;
+    font-weight: bold;
+    opacity: 0;
+    animation: fadein 1s ease-in-out .5s forwards;
+    animation-delay: 1.5s;
+}
+
+.air img {
+    width: 91px;
+    position: absolute;
+    bottom: -28rem;
+    border: 2px solid red;
+    padding: 16px;
+    border-radius: 86px;
+    opacity: 0;
+    animation: fadein 1s ease-in-out .5s forwards;
+    animation-delay: 2.5s;
+}
+
+.counter {
+    color: #fff;
+    border-radius: 83px;
+    border: 2px solid red;
+    position: absolute;
+    bottom: -24.5rem;
+    right: 18rem;
+    background-color: red;
+    width: 2vw;
+    height: 2vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.1rem;
+    font-weight: bold;
+    opacity: 0;
+    animation: fadein 1s ease-in-out .5s forwards;
+    animation-delay: 2s;
+}
+
+button {
+    position: absolute;
+    padding: 25px;
+    bottom: -28rem;
+    left: 0;
+    border-radius: 99px;
+    width: 397px;
+    transition: all 1s ease;
+    color: #fff;
+    font-size: 1.5rem;
+    background-color: red;
+    border: none;
+    opacity: 0;
+    animation: fadein 1s ease-in-out .5s forwards;
+    animation-delay: 1s;
+}
+
+button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px red;
+    background-color: transparent;
+}
+
+
+
+
+
+
+
+
+/** air end **/
+
+
+
+
+
+
 
 
 
